# form_my_cloud

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  setup.cfg  test-requirements.txt  tox.ini
cf/resources/: base.py  elasticbeanstalk.py
cf/resources/elasticbeanstalk/: __init__.py  environment.py
etc/fmc/examples/: basic.py
etc/fmc/examples/cmplex/: __init__.py  metadata.py
etc/fmc/examples/cmplex/resources/: __init__.py
etc/fmc/stacks/examples/cmplex/resources/: elasticbeanstalk.py  iam.py
example/: basic.py  stack.py
fmc/: __init__.py  base.py  cli.py  client.py  decorators.py  description.py  exceptions.py  factory.py  metadata.py  parameters.py
fmc/format/: __init__.py  version.py
fmc/resources/: __init__.py  base.py
fmc/resources/dynamodb/: __init__.py  table.py
fmc/resources/elasticbeanstalk/: __init__.py  application.py  application_version.py  configuration_template.py  environment.py
fmc/resources/iam/: __init__.py  access_key.py  group.py  instance_profile.py  managed_policy.py  policy.py  role.py  user.py  user_to_group_addition.py
test/: 00imports_test.py  cli_test.py  client_test.py  description_test.py  exceptions_test.py  fmc_test.py  format_test.py  metadata_test.py  parameters_test.py  resources_dynamodb_test.py  resources_elasticbeanstalk_application_test.py  resources_elasticbeanstalk_application_version_test.py  resources_elasticbeanstalk_configuration_template_test.py  resources_elasticbeanstalk_environment_test.py  resources_elasticbeanstalk_test.py
