[metadata]
name = fmc
author = Chris Larsen
author-email = clarsen801@gmail.com
summary = AWS CloudFormation Tool
description-file = README.md
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: AWS
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent

[files]
packages = fmc

[entry_points]
console_scripts =
    fmc = fmc.cli:main
